# uno-rs

./: Cargo.toml  README.md
src/: card.rs  deck.rs  drag_and_drop.rs.old.old  drag_and_drop.rs.old.old.old  lib.rs  packet.rs  player.rs
uno/: Cargo.toml
uno-client/: Cargo.toml  emcc_link
uno-client/assets/: cards_a_02.png.old
uno-client/src/: cursor_state.rs  drag_and_drop.rs  lib.rs  main.rs  main.rs.test  menu.rs
uno-client/src/game/: cards.rs  mod.rs  ui.rs
uno-client/src/menu/: lobbies.rs  mod.rs  ui.rs
uno-client/src/utils/: constants.rs  drag_and_drop.rs  errors.rs  mod.rs
uno-server/: Cargo.toml
uno-server/src/: client.rs  events.rs  game.rs  lobbies.rs  main.rs  server.rs  server.rs.old  server_result.rs  world.rs
uno/data/: texts.ron
uno/src/: card.rs  deck.rs  error.rs  lib.rs  lobby.rs  packet.rs  player.rs  texts.rs
uno/src/network/: channels.rs  mod.rs  protocol.rs  shared_config.rs
uno/src/network/protocol/: card_played.rs  card_validation.rs  choose_color.rs  color_chosen.rs  counter_uno.rs  create_lobby.rs  current_color.rs  draw_card.rs  error.rs  game_end.rs  game_exit.rs  hand_size.rs  have_to_draw_card.rs  join_lobby.rs  leave_lobby.rs  lobby.rs  lobby_created.rs  lobby_destroyed.rs  lobby_info.rs  pass_turn.rs  play_card.rs  player.rs  player_joined_lobby.rs  player_left_lobby.rs  player_score.rs  start_game.rs  stop_counter_uno.rs  stop_uno.rs  this_player.rs  uno.rs  username.rs  your_player_id.rs
