[package]
name = "uno-client"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.6"
bevy_ecs = "0.6"
bevy_egui = "0.11"
uuid = "0.8"
itertools = "0.10"
uno = { path = "../uno" }

# [dependencies.wgpu-hal]
# version = "0.12.4"
# features = ["emcripten"]

# Dependencies for WASM only.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.79"
