[package]
name = "uno-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8", features = ["v4"] }
log = "0.4"
simple_logger = "2.1"
serde = "1.0"
serde_json = "1.0"
uno = { path = "../uno" }
