[package]
name = "uno"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
naia-shared = "0.10"
anyhow = "1.0"
serde = "1.0"
ron = "0.7"
uuid = { version = "1.1", features = ["serde"] }
bevy_ecs = "0.7"
